--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="searchbox">
             <input type="text" name="" id="" placeholder="Enter City Name">
-            <button class="btn"><img src="./images/search.png" alt=""></button>
+            <button class="btn"><img src="search.png" alt=""></button>
         </div>
 
         <div class="error">
@@ -19,17 +19,17 @@
         </div>
 
         <div class="main">
-            <img src="/images/clouds.png" alt="">
+            <img src="clouds.png" alt="">
             <h2 class="temp">0°C</h2>
             <h1 class="cityname">Find City</h1>
             <div class="inner-main">
 
                 <div class="left-main">
-                    <img src="/images/humidity.png" alt="">
+                    <img src="humidity.png" alt="">
                     <h2 class="humidity">0% <br> humidity</h2>
                 </div>
                 <div class="right-main">
-                    <img src="/images/wind.png" alt="">
+                    <img src="wind.png" alt="">
                     <h2 class="wind">0 km/h <br> <span>Wind Speed</span></h2>
                 </div>
 
